--- a/assets/styles/scss/layout/_header.scss
+++ b/assets/styles/scss/layout/_header.scss
@@ -11,80 +11,82 @@ header {
 
 // -  <<----------<< Specific >>---------->>
 
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
-}
+// -  <<----------<< Old >>---------->>
 
-.topnav a {
-  display: block;
-  padding: 14px 16px;
-  color: black;
-  float: left;
-  font-size: 17px;
-  text-align: center;
-  text-decoration: none;
-}
+// .topnav {
+//   overflow: hidden;
+//   background-color: #e9e9e9;
+// }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+// .topnav a {
+//   display: block;
+//   padding: 14px 16px;
+//   color: black;
+//   float: left;
+//   font-size: 17px;
+//   text-align: center;
+//   text-decoration: none;
+// }
 
-.topnav a.active {
-  background-color: #2196f3;
-  color: white;
-}
+// .topnav a:hover {
+//   background-color: #ddd;
+//   color: black;
+// }
 
-.topnav .search-container {
-  display: flex;
-  justify-content: flex-end;
-}
+// .topnav a.active {
+//   background-color: #2196f3;
+//   color: white;
+// }
 
-.topnav input[type='text'] {
-  padding: 6px;
-  border: 0;
-  margin-top: 8px;
-  font-size: 17px;
-}
+// .topnav .search-container {
+//   display: flex;
+//   justify-content: flex-end;
+// }
 
-.topnav .search-container button {
-  padding: 6px 10px;
-  border: 0;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  cursor: pointer;
-  float: right;
-  font-size: 17px;
-}
+// .topnav input[type='text'] {
+//   padding: 6px;
+//   border: 0;
+//   margin-top: 8px;
+//   font-size: 17px;
+// }
 
-.topnav .search-container button:hover {
-  background: #ccc;
-}
+// .topnav .search-container button {
+//   padding: 6px 10px;
+//   border: 0;
+//   margin-top: 8px;
+//   margin-right: 16px;
+//   background: #ddd;
+//   cursor: pointer;
+//   float: right;
+//   font-size: 17px;
+// }
 
-@include breakpoint(xsm) {
-  .topnav .search-container {
-    display: block;
-    width: 100%;
-  }
+// .topnav .search-container button:hover {
+//   background: #ccc;
+// }
 
-  label.theme-switch {
-    margin: 8px;
-  }
+// @include breakpoint(xsm) {
+//   .topnav .search-container {
+//     display: block;
+//     width: 100%;
+//   }
 
-  .topnav a,
-  .topnav input[type='text'],
-  .topnav .search-container button {
-    display: block;
-    width: 100%;
-    padding: 14px;
-    margin: 0;
-    float: none;
-    text-align: left;
-  }
+//   label.theme-switch {
+//     margin: 8px;
+//   }
 
-  .topnav input[type='text'] {
-    border: 1px solid #ccc;
-  }
-}
+//   .topnav a,
+//   .topnav input[type='text'],
+//   .topnav .search-container button {
+//     display: block;
+//     width: 100%;
+//     padding: 14px;
+//     margin: 0;
+//     float: none;
+//     text-align: left;
+//   }
+
+//   .topnav input[type='text'] {
+//     border: 1px solid #ccc;
+//   }
+// }
