--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -165,7 +165,7 @@ $letter-spacing--text: normal;
 
 // #  White-Space ---> Default
 
-// -  <<----------<< Debug Colors >>---------->>
+// -  <<----------<< Debug >>---------->>
 
 // #  Color
 $color--debug-1: #f00;
@@ -191,3 +191,5 @@ $color--debug-20: #838996;
 $color--debug-21: #c4aead;
 $color--debug-22: #fff;
 $color--debug-23: #000;
+
+// -  <<----------<< Other >>---------->>
