--- a/assets/styles/scss/layout/_footer.scss
+++ b/assets/styles/scss/layout/_footer.scss
@@ -88,7 +88,7 @@ footer {
 }
 
 /* Media Queries */
-@include breakpoint(xsm) {
+@include breakpoint(xs) {
   .footer .footer-left,
   .footer .footer-right {
     text-align: center;
