--- a/assets/styles/scss/components/_icon.scss
+++ b/assets/styles/scss/components/_icon.scss
@@ -5,7 +5,7 @@
 // -  <<----------<< Generic >>---------->>
 
 svg {
-  fill: var(--foreground-color);
+  fill: $color--text;
 }
 
 // -  <<----------<< Specific >>---------->>
